Add icon to package.json build configuration
Added an icon to the build configuration.

--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
   "build": {
     "appId": "com.popey3200.visiodeo",
     "productName": "Visiodeo",
+    "icon": "visiodeo/visiodeo.ico",
     "files": [
       "visiodeo.html",
       "main.js",
+      "visiodeo/visiodeo.ico",
       "assets/**/*"
     ],
     "win": {
