--- a/package.json
+++ b/package.json
@@ -1,35 +1,21 @@
 {
-  "name": "visiodeo",
+  "name": "visiodeo-mobile",
   "version": "1.0.0",
-  "description": "Visionneuse de Vidéos empaquetée avec Electron (portable)",
-  "main": "main.js",
+  "private": true,
+  "description": "Visiodeo - wrapper mobile (Capacitor)",
   "scripts": {
-    "start": "electron .",
-    "dist": "electron-builder --win portable --x64"
+    "build:web": "echo \"Place your web files into the ./www folder (copy visiodeo.html → www/index.html)\"",
+    "prepare:web": "cp -R visiodeo www || true",
+    "cap:init": "npx cap init VisioDeo com.popey3200.visiodeo --web-dir=www",
+    "cap:add:android": "npx cap add android",
+    "cap:copy": "npx cap copy",
+    "cap:sync": "npx cap sync",
+    "cap:open:android": "npx cap open android"
   },
-  "author": "popey3200",
-  "license": "MIT",
+  "dependencies": {
+    "@capacitor/core": "^5.0.4"
+  },
   "devDependencies": {
-    "electron": "^25.0.0",
-    "electron-builder": "^24.6.0"
-  },
-  "build": {
-    "appId": "com.popey3200.visiodeo",
-    "productName": "Visiodeo",
-    "icon": "visiodeo/visiodeo.ico",
-    "files": [
-      "visiodeo.html",
-      "main.js",
-      "visiodeo/visiodeo.ico",
-      "assets/**/*"
-    ],
-    "win": {
-      "target": [
-        "portable"
-      ]
-    },
-    "directories": {
-      "output": "dist"
-    }
+    "@capacitor/cli": "^5.0.4"
   }
 }
