--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -12,6 +12,9 @@ jobs:
     name: Build Android APK (Capacitor)
     runs-on: ubuntu-latest
 
+    env:
+      ANDROID_SDK_ROOT: ${{ github.workspace }}/android-sdk
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -28,23 +31,34 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
 
-      - name: Install Android SDK tools (sdkmanager)
-        uses: r0adkll/setup-android@v2
-        with:
-          api-level: 33
-          build-tools: "33.0.2"
-          ndk: false
-          cmake: false
+      - name: Install prerequisites
+        run: sudo apt-get update && sudo apt-get install -y unzip wget
+
+      - name: Install Android command line tools and SDK (platform-tools, build-tools, platforms)
+        run: |
+          set -euo pipefail
+          SDK_ROOT="${{ github.workspace }}/android-sdk"
+          mkdir -p "$SDK_ROOT"
+          cd "$SDK_ROOT"
+          # download commandline tools (change URL if needed)
+          echo "Downloading Android command line tools..."
+          wget -q https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O cmdline.zip
+          unzip -q cmdline.zip -d cmdline-temp
+          mkdir -p cmdline-tools/latest
+          # move cmdline tools into expected location
+          mv cmdline-temp/cmdline-tools/* cmdline-tools/latest/ || true
+          rm -rf cmdline.zip cmdline-temp
+          # expose to PATH for this run
+          echo "ANDROID_SDK_ROOT=$SDK_ROOT" >> $GITHUB_ENV
+          echo "PATH=$SDK_ROOT/cmdline-tools/latest/bin:$SDK_ROOT/platform-tools:$PATH" >> $GITHUB_ENV
+          # install platform-tools, platforms and build-tools
+          yes | "$SDK_ROOT/cmdline-tools/latest/bin/sdkmanager" --sdk_root="$SDK_ROOT" "platform-tools" "platforms;android-33" "build-tools;33.0.2"
 
       - name: Accept Android SDK licenses
-        # sdkmanager est mis dans le PATH par l'action setup-android
         run: |
-          set -e
-          if command -v sdkmanager >/dev/null 2>&1; then
-            yes | sdkmanager --licenses || true
-          else
-            echo "sdkmanager not found in PATH — continuing (setup-android should have installed it)"
-          fi
+          set -euo pipefail
+          SDK_ROOT="${{ github.workspace }}/android-sdk"
+          yes | "$SDK_ROOT/cmdline-tools/latest/bin/sdkmanager" --sdk_root="$SDK_ROOT" --licenses || true
 
       - name: Ensure web assets folder
         run: |
